--- a/style.css
+++ b/style.css
@@ -5,91 +5,158 @@ p,
 ul,
 li,
 a {
- margin: 0px;
- padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
+
 body {
- font-family: "Nunito", Helvetica, Arial, sans-serif;
- color: #222;
+    font-family: "Nunito", Helvetica, Arial, sans-serif;
+    color: #222;
 }
+
 ul {
- list-style: none;
+    list-style: none;
 }
+
 a {
- text-decoration: none;
+    text-decoration: none;
 }
+
 img {
- display: block;
- max-width: 100%;
+    display: block;
+    max-width: 100%;
 }
+
 * {
- box-sizing: border-box;
+    box-sizing: border-box;
 }
+
 .superinfo-bg {
- background: #122ab2;
- color: white;
+    background: #122ab2;
+    color: white;
 }
+
 .superinfo {
- max-width: 960px;
- margin: 0 auto;
- display: flex;
- justify-content: space-between;
- flex-wrap: wrap;
- padding-top: 10px;
+    max-width: 960px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 10px;
 }
+
 .superinfo p,
 s.superinfo a {
- margin: 0 10px 10px 10px;
+    margin: 0 10px 10px 10px;
 }
 
 .superinfo a {
- color: white;
+    color: white;
 }
+
 .menu-bg {
- background: #2c70ff;
+    background: #2c70ff;
 }
+
 .menu {
- max-width: 960px;
- margin: 0 auto;
- padding: 15px 0;
- display: flex;
- flex-wrap: wrap;
- justify-content: space-between;
- align-items: center;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 15px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
+
 .menu a {
- color: white;
+    color: white;
 }
+
 .menu-logo a {
- font-size: 2.25em;
- font-weight: bold;
- margin: 0 10px;
+    font-size: 2.25em;
+    font-weight: bold;
+    margin: 0 10px;
 }
+
 .menu-nav ul {
- display: flex;
- flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .menu-nav a {
- font-size: 1.25em;
- display: block;
- padding: 10px;
+    font-size: 1.25em;
+    display: block;
+    padding: 10px;
 }
+
 .menu-nav a:hover {
- color: #122ab2;
+    color: #122ab2;
 }
+
 .introducao {
- font-size: 3em;
- line-height: 1;
- max-width: 960px;
- margin: 0 auto;
- padding: 60px 10px 10px 0;
+    font-size: 3em;
+    line-height: 1;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 60px 10px;
 }
+
 .sobre {
- border-top: 2px solid #2c70ff;
- border-bottom: 2px solid #2c70ff;
- max-width: 960px;
- margin: 0 auto;
- padding: 60px 0;
- display: flex;
+    border-top: 2px solid #2c70ff;
+    border-bottom: 2px solid #2c70ff;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 60px 0;
+    display: flex;
+}
+
+.sobre-info {
+    flex: 2 1 300px;
+    margin: 0 10px;
+}
+
+.sobre-info h1 {
+    font-size: 3em;
+    margin-bottom: .5em;
+
+}
+
+.sobre-info p {
+    font-size: 1.25em;
+    line-height: 1.4em;
+    margin-bottom: 1em;
+    color: #7c7c7c;
+}
+
+.sobre-img {
+    flex: 1 1 160px;
+    margin: 0 10px;
+
+}
+.produtos {
+    margin:  60px auto;
+    max-width: 960px;
+
+}
+.produtos h1 {
+    font-size: 3em;
+    margin: 0 10px 60px 10px;
+}
+.produtos-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.produtos-item {
+flex: 1 1 175px;
+margin: 10px;
+
+}
+.produtos-item h2 {
+    font-size:  3em;
+    color: #a4a4a4;
+    background: #f7f7f7;
+    padding: 60px 20px;
+}
+.purple {
+    border-top: 8px solid #122ab2;
 }
